@@ -107,3 +107,9 @@ tasks {
     usesService(gradle.sharedServices.registrations["testcontainersBuildService"].getService())
   }
 }
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
