@@ -47,3 +47,9 @@ dependencies {
   testImplementation("com.sun.xml.ws:jaxws-rt:2.2.8")
   testImplementation("com.sun.xml.ws:jaxws-tools:2.2.8")
 }
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
